# gpt-all-star-ui

./: .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  Makefile  README.md  agents.json  app.py  models.json  pyproject.toml  settings.py
.devcontainer/: devcontainer.json
.streamlit/: app_config.toml  config.toml
locales/ja_JP/LC_MESSAGES/: messages.mo  messages.po
pages/: 1_Agent.py
src/common/: browser.py  file.py  translator.py
src/models/: extended_step_type.py
st_components/: st_current_step_type.py  st_fixed_component.py  st_init.py  st_introduction.py  st_language.py  st_main.py  st_message.py  st_session_states.py  st_sidebar.py  style.css
st_components/st_models/: extended_step_type.py
