[tool.poetry]
name = "gpt-all-star-ui"
version = "0.0.1"
description = ""
authors = ["kyaukyuai <y.kakui@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.31.1"
gpt-all-star = "^0.0.55"
streamlit-extras = "^0.4.0"
streamlit-option-menu = "^0.3.12"
pillow = "^10.2.0"
nodejs-bin = { extras = ["cmd"], version = "^18.4.0a4" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
